--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,35 +3,35 @@
 <div class="left">
     <h2>Burgers!</h2>
     <ul>
-        {{#each burger}}
-            {{#unless devourved}}
-                <p>
-                    {{this.id}} {{this.burger_name}}
-                    <button data-id="{{this.id}}" class="devourBurger">Devour</button>
-                </p>
-            {{/unless}}
-        {{/each}}
+        {{#each burger}} {{#unless devoured}}
+        <p>
+            {{this.id}} {{this.burger_name}} {{this.devoured}}
+            <button data-id="{{this.id}}" class="devourBurger">Devour</button>
+            <button data-id="{{this.id}}" class="deleteBurger">Remove</button>
+        </p>
+        {{/unless}} {{/each}}
     </ul>
 </div>
 
 <div class="right">
     <h2>Devoured Burgers!</h2>
     <ul>
-        {{#each burger}}
-            {{#if devourved}}
-                {{this.id}} {{this.burger_name}}
-            {{/if}}
-        {{/each}}
-    </ul>  
+        {{#each burger}} {{#if devoured}}
+        <p>
+            {{this.id}} {{this.burger_name}}
+            <button data-id="{{this.id}}" class="deleteBurger">Remove</button>
+        </p>
+        {{/if}} {{/each}}
+    </ul>
 </div>
 
 
 <form class="create-form">
-  <div class="form-group">
-    <label for="burg"></label>
-    <textarea id="burg" name="burger" rows="8" cols="40"></textarea>
-  </div>
+    <div class="form-group">
+        <label for="burg"></label>
+        <textarea id="burg" name="burger" rows="8" cols="40"></textarea>
+    </div>
 
-  <button type="submit">Add Burger</button>
-  Enter a burger you would like to eat and click the "Add Burger" button.
+    <button type="submit">Add Burger</button>
+    Enter a burger you would like to eat and click the "Add Burger" button.
 </form>
